--- a/MC/cuts_AZH.yaml
+++ b/MC/cuts_AZH.yaml
@@ -42,7 +42,8 @@ em:
   ele_lostHits: 1
   ele_convVeto: true
   ele_ID: false
-  ele_iso: false
+  ele_iso_f: false
+  ele_iso: 0.3
 et:
   ele_dxy: 0.045
   ele_dz: 0.2
