--- a/MC/cuts_AZH.yaml
+++ b/MC/cuts_AZH.yaml
@@ -1,30 +1,36 @@
 ---
+mll:
+  mll_low: 60.
+  mll_high: 120. 
 tt:
-  tau_pt: 20
+  tau_pt: 20.
   tau_eta: 2.3
-  tau_antiMu: 0
-  tau_antiEle: 0
   tau_dz: 0.2
   lt_DR: 0.5
   tt_DR: 0.5
+  tau_decayMode: true
+  tau_ID: true 
+  tau_vJet: -1
+  tau_vMu: 8
+  tau_vEle: 4
 mt:
   mu_ID: false
   mu_pt: 10.
   mu_eta: 2.4  
   mu_iso_f : true
-  mu_iso: 0.25
+  mu_iso: 999999.
   mu_dxy: 0.045
   mu_dz: 0.2
-  mt_DR: 0.5
+  lt_DR: 0.3
   tau_pt: 20
   tau_eta: 2.3
-  tau_antiMu: 0
-  tau_antiEle: 0
-  tau_eemt_antiMu: 3
-  tau_decayMode: true
-  tau_ID: 0
   tau_dz: 0.2
-  lt_DR: 0.5
+  tau_decayMode: true
+  tau_ID: true 
+  mt_DR: 0.5
+  tau_vJet: -1
+  tau_vMu: 8
+  tau_vEle: 4
 em: 
   mu_ID: false
   mu_dxy: 0.045
@@ -52,17 +58,17 @@ et:
   ele_convVeto: true
   ele_pt: 10
   ele_eta: 2.5
-  lt_DR: 0.5
+  ele_iso_f: false
+  lt_DR: 0.3
   tau_eta: 2.3
   tau_pt: 20
-  tau_antiMu: 0
-  tau_antiEle: 0
-  tau_eeet_antiEle: 8
-  tau_ID: 0
+  tau_ID: true 
   tau_decayMode: true
   tau_dz: 0.2
   tt_DR: 0.5
-  lt_DR: 0.5
+  tau_vJet: -1
+  tau_vMu: 8
+  tau_vEle: 4
 mm:
   mu_pt: 10.
   mu_eta: 2.4
