--- a/MC/cuts_ZH.yaml
+++ b/MC/cuts_ZH.yaml
@@ -1,4 +1,7 @@
 ---
+mll:
+  mll_low: 60.
+  mll_high: 120. 
 tt:
   tau_pt: 19
   tau_eta: 2.3
@@ -7,6 +10,9 @@ tt:
   tau_dz: 0.2
   lt_DR: 0.5
   tt_DR: 0.5
+  tau_vJet: -1
+  tau_vMu: 8
+  tau_vEle: 4
 mt:
   mu_ID: false
   mu_pt: 10.
@@ -25,6 +31,9 @@ mt:
   tau_ID: 0
   tau_dz: 0.2
   lt_DR: 0.5
+  tau_vJet: -1
+  tau_vMu: 8
+  tau_vEle: 4
 em: 
   mu_ID: false
   mu_dxy: 0.045
@@ -64,6 +73,11 @@ et:
   tau_dz: 0.2
   tt_DR: 0.5
   lt_DR: 0.5
+  ele_iso_f: true
+  ele_iso: 0.3
+  tau_vJet: -1
+  tau_vMu: 8
+  tau_vEle: 4
 mm:
   mu_pt: 10
   mu_eta: 2.4
