--- a/MC/cuts_AZH.yaml
+++ b/MC/cuts_AZH.yaml
@@ -17,11 +17,12 @@ tt:
   tau_vMu: 2
   tau_vEle: 4
 mt:
-  mu_ID: true
+  mu_ID: false
   mu_pt: 10.
   mu_eta: 2.4  
-  mu_iso_f : true
-  mu_iso: 999999.
+  mu_type: true
+  mu_iso_f : false
+  mu_iso: 0.25
   mu_dxy: 0.045
   mu_dz: 0.2
   lt_DR: 0.3
@@ -35,11 +36,12 @@ mt:
   tau_vMu: 2
   tau_vEle: 4
 em: 
-  mu_ID: true
+  mu_ID: false
   mu_dxy: 0.045
   mu_dz: 0.2
   mu_pt: 10.
   mu_eta: 2.4
+  mu_type: true
   mu_iso_f : false 
   mu_iso: 0.25
   em_DR: 0.3
@@ -76,6 +78,7 @@ et:
 mm:
   mu_pt: 10.
   mu_eta: 2.4
+  mu_type: true 
   mu_ID: true
   mu_iso_f : true
   mu_iso: 0.25
