--- a/MC/cuts_ZH.yaml
+++ b/MC/cuts_ZH.yaml
@@ -101,3 +101,22 @@ ee:
   ele_ID: true
   ele_iso_f : true
   ele_iso : 0.2
+mextra:
+  mu_pt: 10
+  mu_eta: 2.4
+  mu_ID: true
+  mu_iso_f: true
+  mu_iso: 0.25
+  mu_dxy: 0.045
+  mu_dz: 0.3
+  mu_type: true
+eextra: 
+  ele_pt: 10.
+  ele_eta: 2.5
+  ele_dxy: 0.045
+  ele_dz: 0.2
+  ele_lostHits: 1
+  ele_convVeto: true
+  ele_ID: true
+  ele_iso_f : true
+  ele_iso : 0.3
