--- a/MC/cuts_ZH.yaml
+++ b/MC/cuts_ZH.yaml
@@ -28,14 +28,14 @@ mt:
   mu_type: false
   tau_pt: 20
   tau_eta: 2.3
-  tau_antiMu: 0
-  tau_antiEle: 0
-  tau_eemt_antiMu: 3
-  tau_decayMode: true
-  tau_ID: 0
+  tau_antimu: 0
+  tau_antiele: 0
+  tau_eemt_antimu: 3
+  tau_decaymode: true
+  tau_id: 0
   tau_dz: 0.2
-  lt_DR: 0.5
-  tau_vJet: 1
+  lt_dr: 0.5
+  tau_vjet: 1
   tau_vMu: 8
   tau_vEle: 1
 em: 
