--- a/MC/cuts_ZH.yaml
+++ b/MC/cuts_ZH.yaml
@@ -18,15 +18,15 @@ tt:
   tau_vMu: 1
   tau_vEle: 4
 mt:
-  mu_ID: false
+  mu_ID: true
   mu_pt: 10.
   mu_eta: 2.4
   mu_dxy: 0.045
   mu_dz: 0.2
-  mu_iso_f: false
+  mu_iso_f: true
   mu_iso : 0.3
   mt_DR: 0.5
-  mu_type: false
+  mu_type: true
   tau_pt: 20
   tau_eta: 2.3
   tau_antiMu: 0
@@ -40,6 +40,18 @@ mt:
   tau_vJet: 1
   tau_vMu: 8
   tau_vEle: 4
+
+mmoverlap:
+  mu_ID: true
+  mu_pt: 10.
+  mu_eta: 2.4
+  mu_dxy: 0.045
+  mu_dz: 0.2
+  mu_iso_f: true
+  mu_iso : 0.3
+  mu_type: true
+  ll_DR: 0.3
+
 em: 
   mu_ID: false
   mu_dxy: 0.045
@@ -85,6 +97,17 @@ et:
   tau_vJet: 1
   tau_vMu: 1
   tau_vEle: 32
+eeoverlap:
+  ele_dxy: 0.045
+  ele_dz: 0.2
+  ele_ID: true
+  ele_lostHits: 2
+  ele_convVeto: true
+  ele_pt: 10
+  ele_eta: 2.5
+  ll_DR: 0.3
+  ele_iso_f: true
+  ele_iso: 0.3
 mm:
   mu_pt: 10
   mu_eta: 2.4
